--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.2",
+    "@mui/material": "^6.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@tabler/icons-react": "^3.19.0",
     "class-variance-authority": "^0.7.0",
